fixed horizontal scroll due to rows in rows or some issue of containers and rows causing weird margins

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -42,14 +42,10 @@ body {
   object-fit: contain;
 }
 
-.product-list-container {
-  width: 50%;
-}
-
 .product-item {
   border: 1px solid lightgray;
   background-color: rgba(255, 255, 255, 0.95);
-  min-width: 28%;
+  min-width: 30%;
   box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2);
   border-radius: 10px;
 }
